Adjusted menu bar position to fixed and changed 'z-index'

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,8 @@ width: auto;
 }
 /* MAIN MENU STUFF */
 .container {
+  position: fixed;
+  z-index: 1;
   display: inline-block;
   cursor: pointer;
   padding-left: 30px;
@@ -51,7 +53,7 @@ width: auto;
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
   background-color: #111;
